# chemparse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  periodic-table.json
.github/workflows/: build-and-test.yml
include/: chemparse.hpp  periodictable.hpp
include/chemparse/: Compound.hpp  Element.hpp  Equation.hpp  chemparse.hpp
src/: chemparse.cpp  main.cpp  periodictable.cpp  test  test.csv
src/chemparse/: Compound.cpp  chemparse.cpp
src/chemparse/util/: periodictable.cpp
src/include/: chemparse.h  chemparse.hpp
tests/: compounds.cpp
